# tradeworks

./: .env.example  .env.paper  .gitignore  README.md  index.html  manifest.json  package.json  pnpm-lock.yaml  solana-sniper-bot-research.md  tradeworks-channel.pine  turbo.json
research/: .env.example  .gitignore  README.md  pyproject.toml
research/research/: __init__.py
research/research/lib/: __init__.py  data.py  regimes.py  report.py  sizing.py  stats.py  walkforward.py
research/research/strategies/: __init__.py
research/research/strategies/_template/: README.md  __init__.py  params.yaml  run.py  signal.py
research/research/strategies/funding_basis/: README.md  __init__.py  data.py  params.yaml  run.py  signal.py
research/research/strategies/funding_basis/fixtures/: btc_funding_history.csv  (+3 more)
research/research/strategies/pead/: README.md  __init__.py  earnings.py  params.yaml  run.py  signal.py  test_pead.py
research/research/strategies/range_grid_stables/: README.md  __init__.py  grid.py  params.yaml  run.py  signal.py  simulator.py
research/research/strategies/regime_trend/: README.md  __init__.py  params.yaml  run.py  signal.py  test_signal.py
research/research/strategies/sector_rotation/: README.md  __init__.py  params.yaml  run.py  signal.py
research/research/strategies/vol_rank_options/: README.md  __init__.py  params.yaml  pricing.py  run.py  signal.py
research/research/tests/: __init__.py  test_funding_basis.py  test_range_grid_stables.py  test_regimes.py  test_sector_rotation.py  test_stats.py  test_vol_rank_options.py  test_walkforward.py
(+777 files in other folders)
