[project]
name = "tradeworks-research"
version = "0.1.0"
description = "Walk-forward backtesting and Monte Carlo research environment for TradeWorks v2."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Strange Digital Group" },
]

# Core dependencies for vectorized backtesting + reporting.
# NOTE: Pinning Python to <3.13 because vectorbt + numba combo is not yet
# fully wheel-released for 3.13 on Windows as of 2026-05. Use 3.11 or 3.12.
dependencies = [
    "vectorbt>=0.27,<0.28",
    "numpy>=1.26,<2.1",
    "pandas>=2.2,<2.3",
    "polars>=1.10,<2.0",
    "scipy>=1.13,<2.0",
    "matplotlib>=3.9,<4.0",
    "plotly>=5.24,<6.0",
    "yfinance>=0.2.50,<0.3",
    "requests>=2.32,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "numba>=0.60,<0.61",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.7,<1.0",
    "mypy>=1.13,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research"]

[tool.pytest.ini_options]
testpaths = ["research/tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
